libycp/testsuite/tests/Locale.err
Parsed:
----------------------------------------------------------------------
_("Everybody likes Linux!")
----------------------------------------------------------------------
[Interpreter] :0 virtual evaluateLocale() !
Parsed:
----------------------------------------------------------------------
_("%d m$-windows system deleted", "%d m$-windows systems deleted", 42)
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
_("%d linux system installed", "%d linux systems installed", (40 + 2))
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  locale `a = "abc";
  if (is (a, locale)) {
  return a;
}
  return false;
}
----------------------------------------------------------------------
[Scanner] tests/Locale.ycp:32 Syntax error: empty locale string
