libycp/testsuite/tests/Locale.ycp

# ---------------------------------------------------------
#
#  Filename:    Locale.ycp
#
#  Purpose:     test cases for YCP test
#
#  Creator:     jd@suse.de
#
#  Maintainer:  jd@suse.de
#
# ---------------------------------------------------------


# --------- YCP_Locale

( _("Everybody likes Linux!") )

( _("%d m$-windows system deleted", "%d m$-windows systems deleted", 42) )

( _("%d linux system installed", "%d linux systems installed", 40+2) )

{ // string -> locale propagation

  locale a = "abc";
  if (is (a, locale))
	return a;
  return false;
}

# error
(_(""))
